[package]
name = "relayer-rust"
version = "0.1.0"
authors = ["huwenchao <me@huwenchao.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-sdk = { git = "https://github.com/nervosnetwork/ckb-cli.git", rev = "5790414" }
serde_json = "1.0"
# reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }

reqwest = "^0.9"
graphql_client = "0.9.0"
serde = "^1.0"
anyhow = "1.0"
chrono = "0.4.13"
log = "0.4"
muta-protocol = { git = "https://github.com/mkxbl/muta.git", rev = "a18ad1e" }
common-logger = { git = "https://github.com/mkxbl/muta.git", rev = "a18ad1e" }
ckb-handler = { git = "https://github.com/mkxbl/muta.git", rev = "a18ad1e" }
common-crypto = { git = "https://github.com/mkxbl/muta.git", rev = "a18ad1e" }
rand = "0.7"
hex = "0.4"

muta-sdk = { path = "muta-sdk" }
toml = "0.5"
derive_more = "0.99"

# ckb
secp256k1 = "0.17.0"
faster-hex = "0.4"
lazy_static = "1.3"
ckb-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.33.0-pre1" }
ckb-hash = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.33.0-pre1" }
ckb-crypto = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.33.0-pre1", features = ["secp"] }
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.33.0-pre1" }
ckb-indexer = { git = "https://github.com/cosinlink/ckb-indexer", rev = "8679b11" }



[workspace]
members = [
    "muta-sdk",
]