[package]
name = "tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-tool = { git = "https://github.com/jjyr/ckb-tool.git", tag = "v0.0.1" }
ckb-testtool = { git = "https://github.com/jjyr/ckb-tool.git", tag = "v0.0.1" }
molecule = { version = "=0.6.0", default-features = false }
hex = "0.4"
libsecp256k1 = { version = "0.3.5", default-features = false }

[dev-dependencies]
ckb-system-scripts = "0.5"
