[package]
name = "muta-sdk"
version = "0.1.0"
authors = ["huwenchao <me@huwenchao.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
reqwest = "^0.9"
graphql_client = "0.9.0"
serde = "^1.0"
hex = "0.4"
muta-protocol = { git = "https://github.com/mkxbl/muta.git", rev = "a18ad1e" }
