[package]
name = "muta-sdk"
version = "0.1.0"
authors = ["huwenchao <me@huwenchao.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
reqwest = { version = "0.10", features = ["json"] }
serde = "1.0"
hex = "0.4"
muta-protocol = { git = "https://github.com/mkxbl/muta.git", rev = "a18ad1e" }
common-crypto = { git = "https://github.com/mkxbl/muta.git", rev = "a18ad1e" }
serde_json = "1.0"
bytes = "0.5"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
