[package]
name = "centralized-crosschain"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.4.1"
molecule = { version = "=0.6.0", default-features = false }
libsecp256k1 = { version = "0.3.5", default-features = false }
blake2b-ref = "0.1.0"

[profile.release]
overflow-checks = true
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
